# wired

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
.github/workflows/: main.yml
Sources/: PluginEditor.cpp  PluginProcessor.h
